<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewCount">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:elevation="8dp"
                app:cardCornerRadius="4dp"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="10dp"
                        android:orientation="horizontal"
                        android:padding="5dp"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/maDonHang"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/orderId"
                            android:textColor="@android:color/holo_red_light"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewChiTietDonHang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="10dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="20dp"
                        android:orientation="horizontal"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:weightSum="2"
                        app:layout_constraintTop_toBottomOf="@id/recyclerViewChiTietDonHang">

                        <TextView
                            android:id="@+id/totalItems"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/totalItems" />

                        <TextView
                            android:id="@+id/totalCost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:text="@string/totalCost"
                            tools:ignore="RtlHardcoded" />
                    </LinearLayout>
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/liner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/Card">

                <TextView
                    android:id="@+id/tvKH"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/customer"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvDC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/address"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvTrangThai"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/orderStatus"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/liner1">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnPDF"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_button"
                    android:text="@string/exportFileButtonTitle" />

                <Space
                    android:id="@+id/spaceBtnHuy"
                    android:layout_width="8dp"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnHuy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/outline_button"
                    android:text="@string/cancelButtonTitle"
                    android:textColor="@color/outline_color"
                    android:visibility="gone" />

                <Space
                    android:id="@+id/spaceBtnDanhGia"
                    android:layout_width="8dp"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnDanhGia"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_button"
                    android:backgroundTint="@color/outline_color"
                    android:text="@string/rateButtonTitle"
                    android:textColor="@color/white"
                    android:visibility="gone" />


            </LinearLayout>
        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>