<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.GioHangActivity">

    <TextView
        android:id="@+id/tvGioHangTrong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emptyCart"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#36DD07"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Giỏ hàng" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewGioHang"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toTopOf="@id/layout1"
        app:layout_constraintTop_toBottomOf="@id/toolbar3" >

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginBottom="18sp"
        app:layout_constraintBottom_toTopOf="@id/btnMuaHang"
        tools:layout_editor_absoluteX="5dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/totalTitle"
            android:textColor="@android:color/holo_red_light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTongTien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="5dp"
            android:text="@string/total"
            android:textColor="@android:color/holo_red_light"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <Button
        android:id="@+id/btnMuaHang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonPurchaseContent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>