<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="8dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/itemGioHangImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/samsung"
             />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/itemGioHangTenSP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:text="@string/hat_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:weightSum="18"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginStart="10dp"
                    android:id="@+id/itemGioHangGia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/itemCartCost"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/itemGioHangTru"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:src="@drawable/ic_minus" />
                <TextView
                    android:gravity="center|center_vertical"
                    android:id="@+id/itemGioHangSoLuong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="15sp"
                    android:text="@string/productCartQuantity"
                    android:textColor="@android:color/holo_red_light"

                    />
                
                <ImageView
                    android:id="@+id/itemGioHangCong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:src="@drawable/ic_plus" />
                <ImageView
                    android:src="@drawable/ic_equals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"/>
                <TextView
                    android:id="@+id/itemGioHangGiaSP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_red_light"
                    android:text="@string/total"
                    />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>