<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ThanhToanActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#36DD07"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="Thanh toán"
        tools:ignore="MissingConstraints" />

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar2"
        android:elevation="8dp"
        android:id="@+id/cardView"
        tools:ignore="MissingConstraints" >

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvTongTienSP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />
            <LinearLayout
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageView
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvSDT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phoneNumber"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />
            <LinearLayout
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageView
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="346dp"
        tools:layout_editor_absoluteY="147dp"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtDiaChi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_location"
            android:drawablePadding="5dp"
            android:hint="@string/addressFieldHint" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDatHang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/orderBtn"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@+id/inputLayout"
        tools:layout_editor_absoluteX="10dp" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnZaloPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zaloPayButton"
        app:layout_constraintTop_toBottomOf="@id/btnDatHang"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="25dp"
        android:textColor="@color/white"
        android:background="#008FE5"
        />
</androidx.constraintlayout.widget.ConstraintLayout>